--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -517,3 +517,16 @@
   eissn        = {1558-2582},
   url          = {https://ieeexplore.ieee.org/abstract/document/1161901},
   }
+
+@article{white2006,
+  journal      = {Journal of Sound and Vibration},
+  volume       = {290},
+  number       = {3--5},
+  year         = {2006},
+  month        = {March},
+  pages        = {676--689},
+  title        = {Analysis of the maximum likelihood, total least squares and principal component approaches for frequency response function estimation},
+  author       = {P. R. White and M. H. Tan and J. K. Hammond},
+  institution  = {Institute of Sound and Vibration Research, University of Southampton, Highfield, Southampton SO17 1BJ, UK},
+  url          = {https://doi.org/10.1016/j.jsv.2005.04.029},
+  }
