--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1059,6 +1059,8 @@
 \newcommand{\fI} [0]{\mathfnct{I}}  % integral
 \newcommand{\fh}{\mathfnct{h}}
 \newcommand{\fH}{\mathfnct{H}}
+\newcommand{\fl}{\mathfnct{l}}
+\newcommand{\fL}{\mathfnct{L}}
 \newcommand{\fP}{\mathfnct{P}}
 \newcommand{\fR}{\mathfnct{R}}
 \newcommand{\fQ}{\mathfnct{Q}}
@@ -1620,12 +1622,14 @@
 %--------------------------------------
 \newcommand{\rvp}[0]{\mbfp}
 \newcommand{\rvq}[0]{\mbfq}
+\newcommand{\rvu}[0]{\mbfu}
+\newcommand{\rvv}[0]{\mbfv}
 \newcommand{\rvx}[0]{\mbfx}
+\newcommand{\rvy}[0]{\mbfy}
 \newcommand{\rvW}[0]{\fnct{W}}
 \newcommand{\rvX}[0]{\fnct{X}}
 \newcommand{\rvY}[0]{\fnct{Y}}
 \newcommand{\rvZ}[0]{\fnct{Z}}
-\newcommand{\rvy}[0]{\mbfy}
 \newcommand{\rvr}[0]{\mbfr}
 \newcommand{\rvt}[0]{\mbftheta}
 
@@ -1646,9 +1650,15 @@
 \newcommand{\Rxx}    [1][xx] {R_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\Sxx}    [1][xx] {S_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swxx}   [1][xx] {\tilde{S}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swuu}   {\Swxx[uu]}
+\newcommand{\Swvv}   {\Swxx[vv]}
 \newcommand{\Swyy}   {\Swxx[yy]}
 \newcommand{\Swxy}   {\Swxx[xy]}
 \newcommand{\Swyx}   {\Swxx[yx]}
+\newcommand{\Swyu}   {\Swxx[yu]}
+\newcommand{\Swuy}   {\Swxx[uy]}
+\newcommand{\Swxv}   {\Swxx[xv]}
+
 \newcommand{\Swphi}  {\Swxx[\phi\phi]}
 \newcommand{\Swpsi}  {\Swxx[\psi\psi]}
 \newcommand{\Swfg}   {\Swxx[fg]}
@@ -1674,6 +1684,8 @@
 
 \newcommand{\Rxy} {\Rxx[xy]} % Cross-correlation function
 \newcommand{\Ryx} {\Rxx[yx]}
+\newcommand{\Ruu} {\Rxx[uu]}
+\newcommand{\Rvv} {\Rxx[vv]}
 \newcommand{\Rpq} {\Rxx[pq]}
 \newcommand{\Rqp} {\Rxx[qp]}
 \newcommand{\Rfg} {\Rxx[fg]}
@@ -1728,6 +1740,7 @@
  \newcommand{\estNP}  [1][\theta] {\est[#1]{np}}  % Neyman-Pearson
  \newcommand{\estMS}  [1][\theta] {\est[#1]{mms}} % minimum mean square
  \newcommand{\estLS}  [1][\theta] {\est[#1]{ls}} % least square
+ \newcommand{\estH}   [1][\theta] {\hat{\fH}}     % estimated transfer function
 
  \newcommand{\fCost}[0]{\ensuremath{C}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
