system identification development

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1623,15 +1623,16 @@
 \newcommand{\rvp}[0]{\mbfp}
 \newcommand{\rvq}[0]{\mbfq}
 \newcommand{\rvu}[0]{\mbfu}
+\newcommand{\rvw}[0]{\mbfw}
 \newcommand{\rvv}[0]{\mbfv}
 \newcommand{\rvx}[0]{\mbfx}
 \newcommand{\rvy}[0]{\mbfy}
+\newcommand{\rvr}[0]{\mbfr}
+\newcommand{\rvt}[0]{\mbftheta}
 \newcommand{\rvW}[0]{\fnct{W}}
 \newcommand{\rvX}[0]{\fnct{X}}
 \newcommand{\rvY}[0]{\fnct{Y}}
 \newcommand{\rvZ}[0]{\fnct{Z}}
-\newcommand{\rvr}[0]{\mbfr}
-\newcommand{\rvt}[0]{\mbftheta}
 
 %--------------------------------------
 % Statistics
@@ -1658,6 +1659,7 @@
 \newcommand{\Swyu}   {\Swxx[yu]}
 \newcommand{\Swuy}   {\Swxx[uy]}
 \newcommand{\Swxv}   {\Swxx[xv]}
+\newcommand{\Swww}   {\Swxx[ww]}
 
 \newcommand{\Swphi}  {\Swxx[\phi\phi]}
 \newcommand{\Swpsi}  {\Swxx[\psi\psi]}
@@ -1744,7 +1746,8 @@
  \newcommand{\estHs}   {\estH_{\mathsfup{s}}}  % scaled transfer function estimator
  \newcommand{\estHkappa}   {\estH_{\mathsfup{\kappa}}}  % White's transfer function estimator
  \newcommand{\estHw}   {\estH_{\mathsfup{w}}}  % White's transfer function estimator
- \newcommand{\estHc}   {\estH_{\mathsfup{c}}}  % White's transfer function estimator
+ \newcommand{\estHv}   {\estH_{\mathsfup{v}}}  % total least squares estimator
+ \newcommand{\estHc}   {\estH_{\mathsfup{c}}}  % 
 
  \newcommand{\fCost}[0]{\ensuremath{C}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
