arithmetic, geometric, and harmonic mean estimators for transfer function

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -142,6 +142,16 @@
   urla         = {http://www.amazon.com/dp/1611974712},
   }
 
+@inproceedings{carne2006,
+  author       = {Thomas G. Carne and C. R. Dohrmann},
+  title        = {Improving Experimental Frequency Response Function Matrices for Admittance Modeling},
+  booktitle    = {Proceedings of the XXIV International Modal Analysis Conference (IMAC)},
+  address      = {St. Louis, Missouri, USA},
+  url          = {https://www.researchgate.net/publication/265790751},
+  year         = {2006},
+  journal 
+  }
+
 @phdthesis{cobb1988,
   author       = {Richard E. Cobb},
   title        = {Confidence Bands, Measurement Noise, and Multiple Input - Multiple Output Measurements Using the Three-Channel Frequency Response Function Estimator},
@@ -181,6 +191,7 @@
   language     = {English},
   oclc         = {22305429},
   }
+
 
 @book{feller1971,
   author       = {William Feller},
@@ -278,19 +289,6 @@
   url          = {https://www.researchgate.net/publication/283994172},
   }
 
-@book{lindquist2015,
-  isbn10       = {3662457504},
-  isbn         = {9783662457504},
-  title        = {Linear Stochastic Systems: A Geometric Approach to Modeling, Estimation and Identification},
-  volume       = {1},
-  series       = {Series in Contemporary Mathematics},
-  author       = {Anders Lindquist and Giorgio Picci},
-  publisher    = {Springer},
-  year         = {2015},
-  pages        = {781},
-  url          = {http://books.google.com/books?vid=ISBN3662457504},
-  urla         = {http://www.amazon.com/dp/3662457504},
-  }
 @book{manolakis2005,
   isbn10       = {1580536107},
   isbn         = {9781580536103},
@@ -565,4 +563,36 @@
   author       = {P. R. White and M. H. Tan and J. K. Hammond},
   institution  = {Institute of Sound and Vibration Research, University of Southampton, Highfield, Southampton SO17 1BJ, UK},
   url          = {https://doi.org/10.1016/j.jsv.2005.04.029},
+  }
+
+@article{zheng2002,
+  title        = {Improved methods for the estimate of frequency response functions},
+  author       = {Mu-Qiao Zheng and She-Ping Hu and Li Li},
+  pages        = {917--921},
+  url          = {https://pdfs.semanticscholar.org/edfc/0572a727633e729204bc9a8cbce4eb3211e5.pdf},
+  }
+
+@book{lindquist2015,
+  isbn10       = {3662457504},
+  isbn         = {9783662457504},
+  title        = {Linear Stochastic Systems: A Geometric Approach to Modeling, Estimation and Identification},
+  volume       = {1},
+  series       = {Series in Contemporary Mathematics},
+  author       = {Anders Lindquist and Giorgio Picci},
+  publisher    = {Springer},
+  year         = {2015},
+  pages        = {781},
+  url          = {http://books.google.com/books?vid=ISBN3662457504},
+  urla         = {http://www.amazon.com/dp/3662457504},
+  }
+
+@book{ewins1985,
+  isbn10       = {086380036X},
+  isbn         = {9780863800368},
+  title        = {Modal Testing: Theory and Practice},
+  year         = {1985},
+  month        = {November 27},
+  author       = {D. J. Ewins},
+  pages        = {269},
+  url          = {http://www.amazon.com/dp/086380036X},
   }
