Some new system with additive noise figures

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -756,7 +756,7 @@
   oclc         = {62088561},
   language     = {English},
   url          = {http://www.archive.org/details/anintroductiont00bromgoog},
-  urlg         = {http://books.google.com.tw/books?id=MWm4AAAAIAAJ},
+  urlg         = {http://books.google.com/books?id=MWm4AAAAIAAJ},
   pages        = {511+xvi},
   isbn10       = {0821839764},
   isbn         = {9780821839768},
@@ -3092,7 +3092,7 @@
   year         = {1926},
   publisher    = {The University Press},
   url          = {http://www.archive.org/details/theoryfunctreal01hobsrich},
-  urlg         = {http://books.google.com.tw/books?id=I6ggAAAAMAAJ},
+  urlg         = {http://books.google.com/books?id=I6ggAAAAMAAJ},
   }
 
 @book{hobson1926,
@@ -3245,7 +3245,7 @@
   publisher    = {Mathematical Association of America},
   pages        = {234},
   note         = {2004 Dover edition available, \url{http://books.google.com/books?vid=ISBN0486438082}},
-  url          = {http://books.google.com.tw/books?id=5hMJAQAAIAAJ},
+  url          = {http://books.google.com/books?id=5hMJAQAAIAAJ},
   urlg         = {http://books.google.com/books?vid=ISBN0486438082},
   urlw         = {http://www.worldcat.org/isbn/0486438082},
   urla         = {http://www.amazon.com/dp/0486438082},
@@ -3995,7 +3995,7 @@
   year         = {1965},
   pages        = {310},
   publisher    = {Mathematical Association of America},
-  url          = {http://books.google.com.tw/books?id=MEfvAAAAMAAJ}
+  url          = {http://books.google.com/books?id=MEfvAAAAMAAJ}
   }
 
 @article{luzin1913,
@@ -4401,7 +4401,7 @@
   pages        = {122},
   series       = {Van Nostrand mathematical studies},
   volume       = {4},
-  url          = {https://books.google.com.tw/books?id=KwV_mwEACAAJ},
+  url          = {https://books.google.com/books?id=KwV_mwEACAAJ},
   note         = {originally written in Portuguese circa 1950},
   
   }
@@ -4566,6 +4566,20 @@
   address      = {Cambridge},
   language     = {English},
   archiveorg   = {184847446},
+  }
+
+@book{overschee2012,
+  isbn10       = {1461304652},
+  isbn         = {9781461304654},
+  title        = {Subspace Identification for Linear Systems: Theory --- Implementation --- Applications},
+  author       = {Peter van Overschee and B. L. de Moor},
+  edition      = {illustrated},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2012},
+  pages        = {272},
+  url          = {http://books.google.com/books?vid=isbn1461304652},
+  urlw         = {http://www.worldcat.org/isbn/1461304652},
+  urla         = {http://www.amazon.com/dp/1461304652},
   }
 
 @inproceedings{packer2004,
@@ -5801,7 +5815,7 @@
   year         = {1952},
   edition      = {revised},
   publisher    = {Department of Mathematics Graduate School of Arts and Sciences University of Cincinnati},
-  url          = {http://books.google.com.tw/books?id=ELsrAAAAYAAJ},
+  url          = {http://books.google.com/books?id=ELsrAAAAYAAJ},
   urla         = {www.amazon.com/dp/B00667WB7Q},
   }
 
@@ -6130,7 +6144,7 @@
   pages        = {213},
   series       = {Addison-Wesley series in mathematics},
   volume       = {8541},
-  url          = {http://books.google.com.tw/books?id=UyTvAAAAMAAJ},
+  url          = {http://books.google.com/books?id=UyTvAAAAMAAJ},
   }
 
 @article{wei2006,
