--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -69,6 +69,20 @@
   urla         = {http://www.amazon.com/dp/1118210824},
   }
 
+@book{bendat2013,
+  isbn10       = {0471570559},
+  isbn         = {9780471570554},
+  author       = {Julius S. Bendat and Allan G. Piersol}, 
+  title        = {Engineering Applications of Correlation and Spectral Analysis},
+  publisher    = {Wiley-Interscience},
+  edition      = {2},
+  language     = {English},
+  year         = {2013},
+  month        = {August 12},
+  urlg         = {http://books.google.com/books?vid=ISBN0471570559},
+  url          = {http://www.amazon.com/dp/0471570559},
+  }
+
 @book{billingsley1995,
   author       = {Patrick Billingsley},
   title        = {Probability And Measure},
@@ -249,6 +263,21 @@
   url          = {https://hal.archives-ouvertes.fr/hal-00911916/document},
   }
 
+@book{liang2015,
+  isb10        = {1498702341},
+  isbn         = {9781498702348},
+  title        = {Random Vibration: Mechanical, Structural, and Earthquake Engineering Applications},
+  series       = {Advances in Earthquake Engineering},
+  author       = {Zach Liang and George C. Lee},
+  edition      = {illustrated},
+  publisher    = {Taylor \& Francis},
+  year         = {2015},
+  pages        = {668},
+  urlg         = {http://books.google.com/books?vid=ISBN1498702341},
+  url          = {http://www.amazon.com/dp/1498702341},
+  mel          = {http://elibrary.mel.org/record=b32273225},
+  }
+
 @book{lindquist2015,
   isbn10       = {3662457504},
   isbn         = {9783662457504},
@@ -358,27 +387,33 @@
   publisher    = {The MathWorks, Inc.},
   }
 
-@article{mitchell1980,
+@inproceedings{mitchell1980,
   title        = {An Improved Method for the Fast Fourier Transform (FFT) Calculation of the Frequency Response Function},
-  author       = {L. D. Mitchell},
-  journal      = {First European Signal Processing Conference},
+  author       = {Larry D. Mitchell},
+  booktitle    = {Proceedings  of EUSIPCO-80, First European Signal Processing Conference},
+  series       = {Signal processing, theories and applications},
+  editor       = {M. Kunt and F. De Coulon},
   address      = {Lausanne, Switzerland},
   month        = {September 16--19},
+  publisher    = {Elsevier},
   year         = {1980},
   pages        = {159--160},
   note         = {citation from Cobb(1988)},
+  oclc         = {63416846},
+  url          = {http://www.worldcat.org/oclc/63416846},
   }
 
 @article{mitchell1982,
   series       = {Mechanical Signature Analysis Papers},
   title        = {Improved Methods for the Fast Fourier Transform (FFT) Calculation of the Frequency Response Function},
-  author       = {L. D. Mitchell},
+  author       = {Larry D. Mitchell},
   institution  = {Department of Mechanical Engineering, Virginia Polytechnic Institute and State University},
   address      = {Blacksburg, Virginia USA 24061},
   journal      = {Journal of Mechanical Design},
   volume       = {104},
   number       = {2},
   pages        = {277--279},
+  year         = {1982},
   month        = {April 01},
   doi          = {10.1115/1.3256336},
   url          = {http://mechanicaldesign.asmedigitalcollection.asme.org/article.aspx?articleid=1451670},
@@ -480,6 +515,19 @@
   pages        = {454},
   url          = {http://books.google.com/books?vid=ISBN0137116985},
   urla         = {http://www.amazon.com/dp/0137116985},
+  }
+
+@book{pintelon2012,
+  isbn10       = {1118287398},
+  isbn         = {9781118287392},
+  title        = {System Identification: A Frequency Domain Approach},
+  author       = {Rik Pintelon and Johan Schoukens},
+  edition      = {2},
+  publisher    = {John Wiley \& Sons},
+  year         = {2012},
+  pages        = {788},
+  url          = {http://books.google.com/books?vid=ISBN1118287398},
+  urla         = {https://www.amazon.com/dp/1118287398},
   }
 
 @book{poincare_calc_prob,
