--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -8,6 +8,11 @@
 %=======================================
 \section{Additive noise}
 %=======================================
+\begin{figure}
+  \centering%
+  \includegraphics{graphics/xhyplusv.pdf}
+  \caption{System model with additive input and output noise\label{fig:xhyplusv}}
+\end{figure}
 %---------------------------------------
 \begin{proposition}
 \footnote{
@@ -15,8 +20,8 @@
   }
 \label{prop:Swxyv}
 %---------------------------------------
-Let $\fh[n]$ be the \fncte{impulse response} of a system 
-with input $\fx[n]$ and output $\fy[n]$.
+Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh[n]$,
+input $\fx[n]$, and output $\fy[n]$.
 Let $\fv[n]$ be \fncte{noise sequence} and $\fy'[n]\eqd\fy[n]+\fv[n]$.
 \propbox{
   \brb{\begin{array}{FMMD}
