--- a/common/interpo.tex
+++ b/common/interpo.tex
@@ -348,6 +348,9 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
 
 %---------------------------------------
 \begin{example}[\exmd{Least squares polynomial interpolation}]
+\footnote{
+  \citerpgc{overschee2012}{14}{1461304652}{Table 1.1; historical perspective as relates to ``subspace identification"}
+  }
 \index{polynomial!least squares}
 \index{least squares}
 \label{ex:ls}
