--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -730,7 +730,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
   \implies
   \brb{\begin{array}{FrclD}
        (1).&\Swxy(\omega) &=& \ds \Swxx(\omega) \Fh^\ast(\omega) & and
-     \\(2).&\Swyy(\omega) &=& \ds \Swyx(\omega) \Fh^\ast(\omega)   & and
+     \\(2).&\Swyy(\omega) &=& \ds \Swxy(\omega) \Fh     (\omega)   & and
      \\(3).&\Swyy(\omega) &=& \mc{2}{l}{\ds \Swxx(\omega) \abs{\Fh(\omega)}^2}
   \end{array}}
   }
@@ -750,16 +750,19 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{\xref{def:dtft}}
    \\
    \Swyy(\omega)
-     &= \brlr{\ZSyy(z)}_{z=e^{i\omega}}
+     &= \Swyy^\ast(\omega)
+     && \text{becauase $\Swyy$ is \prope{real-valued}}
+   \\&= \brp{\brlr{\ZSyy(z)}_{z=e^{i\omega}}}^\ast
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brlr{\ZSyx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+   \\&= \brp{\brlr{\ZSyx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}}^\ast
      && \text{by \prefp{thm:ZSxy}}
-   \\&= \ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
-   \\&= \ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}
-   \\&= \Swyx(\omega) \Fh^\ast(\omega)
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}}^\ast
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}}^\ast
+   \\&= \brp{\Swyx(\omega) \Fh^\ast(\omega)}^\ast
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
+   \\&= \Swxy(\omega) \Fh(\omega)
    \\
    \Swyy(\omega)
      &= \brlr{\ZSyy(z)}_{z=e^{i\omega}}
